@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-26T02:20:55Z",
+  "timestamp" : "2022-10-26T08:30:44Z",
   "count_outdated" : 844,
   "uniques_outdated" : 443,
-  "count" : 874,
-  "uniques" : 458,
+  "count" : 876,
+  "uniques" : 460,
   "clones" : [
     {
       "timestamp": "2022-10-12T00:00:00Z",
@@ -102,6 +102,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-26T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
