@@ -1,6 +1,6 @@
 {
-  "count": 30,
-  "uniques": 2,
+  "count": 32,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-10-12T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2022-10-25T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-26T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
